# HackerNews

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  evaluate_rag.py  evaluate_results.csv  pyproject.toml  run_pipeline.ps1  run_streamlit.ps1
app/: streamlit_app.py
gui/: streamlit_app.py
src/: __init__.py  document_splitter.py  embedder.py  fetcher.py  llm.py  loader.py  preprocess.py  prompt.py  rag.py  retriever.py  vector_store.py
src/data_analysis/: __init__.py  api_endpoints.py  extract.py  fetcher.py  load.py  preprocess.py  transform.py
src/hn_rag/: fetcher.py
src/pipeline/: run_pipeline.py
