[project]
name = "hackernews"
version = "0.1.0"
description = ""
authors = [
    {name = "Oussama Anadani",email = "anadani@student.chalmers.se"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "ijson (>=3.4.0,<4.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.11"
