[project]
name = "hackernews"
version = "0.1.0"
description = "RAG system for HackerNews content using Ollama"
authors = [
    {name = "Oussama Anadani",email = "anadani@student.chalmers.se"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "ijson (>=3.4.0,<4.0.0)",    "langchain-community (>=0.3.24,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "protobuf (==3.20.3)",
    "torch (>=2.7.0,<3.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "chromadb (>=1.0.10,<2.0.0)"
]

[project.scripts]
hackernews-gui = "gui.streamlit_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "gui*", "tests*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.11"
